cleaned up and squashed bugs in show friends, show profile, and search resutls

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,4 +13,8 @@
  *= require_tree .
  *= require_self
  */
- 
+
+html {
+  margin: 0;
+  padding: 0;
+}
